# api/controllers/modules.js
@@ -169,15 +169,7 @@ async function preparePostMessage(task) {
                 }
                 msg["type"] = [];
                 for (var i = 0; i < lengthOfLeftFields; i++) {
-                    var dynamicSelect = leftFieldArray[i].split(CAMUNDA_CONFIG.typeSplit);
-                    console.log(leftFieldArray);
-                    if (dynamicSelect[0] == "static_select") {
-                        msg["typeOptions"] = db[dynamicSelect[1]]
-                        //msg["typeOptions"] = await postToSwaggerAPI(msg, lldap, callback);
-                        msg["type"].push(dynamicSelect[0]);  
-                    } else {
-                        msg["type"].push(leftFieldArray[i]);                       
-                    }
+                    msg["type"].push(leftFieldArray[i]);                       
                     leftFieldArray.splice(i, 1);
                 }
                 msg["message"] = []
